docs: Add initial project documentation and metadata

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pomodoro Timer</title>
+    <meta name="description" content="Pomodoro focus timer Chrome extension with task management. Boost productivity with structured work sessions, automatic break reminders, and a built-in to-do list." />
+    <link rel="icon" type="image/png" sizes="48x48" href="/icons/icon-48.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/icons/icon-16.png" />
+    <title>Pomodoro Task Timer - Focus & Productivity</title>
   </head>
   <body>
     <div id="root"></div>
